BE/infra/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-method: 'GET, POST'
    nginx.ingress.kubernetes.io/proxy-read-timeout: 300
    nginx.ingress.kubernetes.io/proxy-buffer-size: '16k'
spec:
  rules:
    - host: andychen.com.tw
      http:
        paths:
          - path: /api
            backend:
              serviceName: backend
              servicePort: 3000
